--- a/rmngb/DESCRIPTION
+++ b/rmngb/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: rmngb
-Version: 0.5-1
-Date: 2014-09-21
+Version: 0.6-1
+Date: 2014-10-13
 Title: rmngb Miscellaneous
 Author: Antoine Filipovic Pierucci
 Maintainer: Antoine Filipovic Pierucci <pierucci@gmail.com>
 Description: A collection of miscellaneous functions. Exploratory data analysis, multidimensional visualization, medico-economic simulation, multiple testing...
 License: GPL (>= 3)
+Imports: Hmisc
 Packaged: 2014-06-07 22:32:53 UTC; antoine
 NeedsCompilation: no
 Repository: CRAN
